Stop hotlinking from raw.githubusercontent.com
The web site went on HN and reddit now so there won't be any new high load and
in practice, the f1-micro server handles the load just fine.

This will likely help the web site performance a bit.

--- a/site/content/device/bme280.md
+++ b/site/content/device/bme280.md
@@ -11,7 +11,7 @@ pressure sensor.
 
 It supports low precision temperature measurement.
 
-![bme280](https://raw.githubusercontent.com/periph/website/master/site/static/img/bme280.jpg)
+![bme280](/img/bme280.jpg)
 
 
 # Driver
@@ -90,7 +90,7 @@ test](https://periph.io/x/periph/devices/bme280/bme280smoketest):
   - the top one is connected via [I²C](https://periph.io/x/periph/conn/i2c)
   - the bottom one is connected via [SPI](https://periph.io/x/periph/conn/spi):
 
-![bme280](https://raw.githubusercontent.com/periph/website/master/site/static/img/bme280-two.jpg)
+![bme280](/img/bme280-two.jpg)
 
 It confirms that two BME280 sensors can be driven simultaneously, one
 connected via I²C, one via SPI. They shall measure mostly the same atmospheric
