--- a/site/content/device/ssd1306.md
+++ b/site/content/device/ssd1306.md
@@ -32,7 +32,7 @@ to stream animanted GIFs to the display.
 
 # Example
 
-![boardimage](https://raw.githubusercontent.com/periph/website/master/site/static/img/ballerine.gif)
+![boardimage](/img/ballerine.gif)
 
 _Purpose:_ display an animated GIF.
 
