--- a/site/content/device/bme280.md
+++ b/site/content/device/bme280.md
@@ -68,7 +68,7 @@ func main() {
     if err != nil {
         log.Fatal(err)
     }
-    defer dev.Close()
+    defer dev.Halt()
 
     // Read temperature from the sensor:
     var env devices.Environment
