Update twitter account to @periphio, add author link
For news pages (which is more of a blog), add author link so if other people
wants to publish an entry, they can be linked back to their home page if they
desire.

--- a/site/content/news/2017/v2.0.0.md
+++ b/site/content/news/2017/v2.0.0.md
@@ -1,6 +1,8 @@
 +++
 date = "2017-08-28"
 title = "Announcing v2.0.0"
+author = "Marc-Antoine Ruel"
+authorlink = "https://maruel.ca"
 description = "v1.0.0, we barely knew ya!"
 tags = []
 notruncate = false
