--- a/site/content/news/2018/v2.2.0.md
+++ b/site/content/news/2018/v2.2.0.md
@@ -66,15 +66,19 @@ deletions(-)`.
   parallelism](https://twitter.com/periphio/status/986235606803124224) in driver
   loading. This function will be added to
   [periph.Driver](https://periph.io/x/periph#Driver) in v3.
-- Added support for a new build tag `periphextra`. It is not useful yet but
-  you'll hear about it really soon.
+- [cmd](https://periph.io/x/periph/cmd/): Added support for a new build tag
+  `periphextra`. This makes the executables use
+  [hostextra.Init()](https://periph.io/x/extra/hostextra#Init) instead of
+  [host.Init()](https://periph.io/x/periph/host#Init).
   - **Warning**: If you use a pattern like `go build ./cmd/periph-info/main.go`,
     this will not work anymore as
-    each executable is now multiple source files. The correct way is `go build
+    each executable is now multiple source files. The correct way is `go install
     periph.io/x/periph/cmd/periph-info`
 - [gpiotest](https://periph.io/x/periph/conn/gpio/gpiotest): Added
   [PinPWM](https://periph.io/x/periph/conn/gpio/gpiotest#PinPWM) and
   [LogPinIO](https://periph.io/x/periph/conn/gpio/gpiotest#LogPinIO).
+- [onewire-list](https://periph.io/x/periph/cmd/onewire-list) to display
+  registered 1-wire buses.
 
 
 ## Special thanks
@@ -90,6 +94,9 @@ possible!
 - [@libesz](https://github.com/libesz) for onewire-list command.
 - [@mattetti](https://github.com/mattetti) for cap1188 device driver.
 - [@simokawa](https://github.com/simokawa) for bcm283x DMA improvements.
+
+I ([@maruel](https://github.com/maruel)) did the rest, including the release
+process and the [gohci test lab](https://github.com/periph/gohci).
 
 Follow [twitter.com/periphio](https://twitter.com/periphio) for news and
 updates!
