--- a/site/content/news/2018/v3.0.0.md
+++ b/site/content/news/2018/v3.0.0.md
@@ -259,6 +259,12 @@ Some of the changes here are to enable new drivers like the FT232H and FT232R,
 which enables a less Linux-focused driver support.
 
 
+## Thanks
+
+I'd like to thanks for all the folks on the slack channel for the feedback and
+code reviews. The project would be much less awesome without them!
+
+
 ## Found bugs? Have questions?
 
 - File a report at
