device: overhaul to make it more usable
Include pictures and simple description in the device list.
Add examples.

--- a/site/content/device/ds18b20.md
+++ b/site/content/device/ds18b20.md
@@ -1,10 +1,21 @@
 +++
 title = "DS18b20"
 description = "Inexpensive temperature sensor"
+picture = "/img/ds18b20.jpg"
 +++
 
 # Overview
 
-[periph.io/x/periph/devices/ds18b20](https://periph.io/x/periph/devices/ds18b20)
-provides support for inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire
-temperature sensors.
+[ds18b20](https://periph.io/x/periph/devices/ds18b20) provides support for
+inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire temperature sensors.
+
+
+# Example
+
+```go
+package main
+
+func main() {
+  // TODO 😳
+}
+```
