--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -1,10 +1,21 @@
 +++
 title = "DS248x"
 description = "1-wire interface over I²C"
+picture = "/img/lab-280.jpg"
 +++
 
 # Overview
 
-[periph.io/x/periph/devices/ds248x](https://periph.io/x/periph/devices/ds248x)
-provides support for a Maxim DS2483 or DS2482-100 1-wire interface chip over
-I²C.
+[ds248x](https://periph.io/x/periph/devices/ds248x) provides support for a Maxim
+DS2483 or DS2482-100 1-wire interface chip over I²C.
+
+
+# Example
+
+```go
+package main
+
+func main() {
+  // TODO 😳
+}
+```
