--- a/site/content/device/ssd1306.md
+++ b/site/content/device/ssd1306.md
@@ -1,13 +1,13 @@
 +++
 title = "SSD1306"
 description = "1 bit OLED display controller"
+picture = "/img/ssd1306.jpg"
 +++
 
 # Overview
 
-[periph.io/x/periph/devices/ssd1306](https://periph.io/x/periph/devices/ssd1306)
-provides support for the SSD1306 monochrome OLED display controller via I²C or
-SPI in 4-wire mode.
+[ssd1306](https://periph.io/x/periph/devices/ssd1306) provides support for the
+SSD1306 monochrome OLED display controller via I²C or SPI in 4-wire mode.
 
 It can control displays up to 128x64 in size.
 
