--- a/site/content/device/tm1637.md
+++ b/site/content/device/tm1637.md
@@ -1,10 +1,21 @@
 +++
 title = "TM1637"
 description = "Segment controller"
+picture = "/img/tm1637.jpg"
 +++
 
 # Overview
 
-[periph.io/x/periph/devices/tm1637](https://periph.io/x/periph/devices/tm1637)
-provides support for the TM1637 hex digits controller. It is controlled directly
-over GPIO pins.
+[tm1637](https://periph.io/x/periph/devices/tm1637) provides support for the
+TM1637 hex digits controller. It is controlled directly over GPIO pins.
+
+
+# Example
+
+```go
+package main
+
+func main() {
+  // TODO 😳
+}
+```
