Add picture for /device/ds248x

--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -1,7 +1,7 @@
 +++
 title = "DS248x"
 description = "1-wire interface over I²C"
-picture = "/img/lab-280.jpg"
+picture = "/img/ds248x.jpg"
 +++
 
 # Overview
