apa102 and ir: improve documentation
ir: Move configuration information from the package documentation into the web
site. Update links.

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -11,7 +11,7 @@ DotStar by Adafruit.
 
 Their main advantage over WS2812b LEDs are:
 
-- works over SPI at higher clock rate
+- works over SPI at higher clock rate (up to 20MHz)
 - high contrast supported via dual PWM, one 5 bit and one 8 bit leading to a
   total range of 13 bits
 
