device: add 'fork and edit this page' links in missing Example

--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -12,11 +12,14 @@ DS2483 or DS2482-100 1-wire interface chip over I²C.
 
 # Example
 
+Please [fork and edit this
+page](https://github.com/periph/website/edit/master/site/content/device/ds248x.md)
+to complete the example. Thanks!
+
 ```go
 package main
 
 func main() {
   // TODO 😳
-  // Please sent a PR against https://github.com/periph/website
 }
 ```
