--- a/site/content/device/ds18b20.md
+++ b/site/content/device/ds18b20.md
@@ -12,11 +12,14 @@ inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire temperature sensors.
 
 # Example
 
+Please [fork and edit this
+page](https://github.com/periph/website/edit/master/site/content/device/ds18b20.md)
+to complete the example. Thanks!
+
 ```go
 package main
 
 func main() {
   // TODO 😳
-  // Please sent a PR against https://github.com/periph/website
 }
 ```
