--- a/site/content/device/tm1637.md
+++ b/site/content/device/tm1637.md
@@ -12,11 +12,14 @@ TM1637 hex digits controller. It is controlled directly over GPIO pins.
 
 # Example
 
+Please [fork and edit this
+page](https://github.com/periph/website/edit/master/site/content/device/tm1637.md)
+to complete the example. Thanks!
+
 ```go
 package main
 
 func main() {
   // TODO 😳
-  // Please sent a PR against https://github.com/periph/website
 }
 ```
