Change 'fork and edit' wording
The previous text 'fork and edit this page online' was a bit vague. 'Edit this
page on GitHub' will likely help users better visualize what's going to happen.

--- a/site/content/device/tm1637.md
+++ b/site/content/device/tm1637.md
@@ -12,8 +12,8 @@ TM1637 hex digits controller. It is controlled directly over GPIO pins.
 
 # Example
 
-Please [fork and edit this
-page](https://github.com/periph/website/edit/master/site/content/device/tm1637.md)
+Please [edit this page on
+GitHub](https://github.com/periph/website/edit/master/site/content/device/tm1637.md)
 to complete the example. Thanks!
 
 ```go
