--- a/site/content/device/ds18b20.md
+++ b/site/content/device/ds18b20.md
@@ -12,8 +12,8 @@ inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire temperature sensors.
 
 # Example
 
-Please [fork and edit this
-page](https://github.com/periph/website/edit/master/site/content/device/ds18b20.md)
+Please [edit this page on
+GitHub](https://github.com/periph/website/edit/master/site/content/device/ds18b20.md)
 to complete the example. Thanks!
 
 ```go
