--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -12,8 +12,8 @@ DS2483 or DS2482-100 1-wire interface chip over I²C.
 
 # Example
 
-Please [fork and edit this
-page](https://github.com/periph/website/edit/master/site/content/device/ds248x.md)
+Please [edit this page on
+GitHub](https://github.com/periph/website/edit/master/site/content/device/ds248x.md)
 to complete the example. Thanks!
 
 ```go
