Standardize buying links with disclaimer
The periph authors do not endorse any specific seller. These are only provided
for your convenience.

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -6,8 +6,7 @@ picture = "/img/apa102.jpg"
 
 # Overview
 
-APA102 LEDs are RGB 5Volts LEDs that are addressed via SPI. They are called
-DotStar by Adafruit.
+APA102 LEDs are RGB 5Volts LEDs that are addressed via SPI.
 
 Their main advantage over WS2812b LEDs are:
 
@@ -107,3 +106,23 @@ func colorWheel(h float64) color.NRGBA {
 	}
 }
 ```
+
+
+# Buying
+
+APA102 LEDs can be bought in various arangements:
+
+- Adafruit calls them DotStar:
+  [adafruit.com/?q=dotstar](https://www.adafruit.com/?q=dotstar)
+- Aliexpress:
+  [aliexpress.com/wholesale?SearchText=apa102](https://aliexpress.com/wholesale?SearchText=apa102)
+  (quality will vary among resellers)
+- Amazon:
+  [amazon.com/s?field-keywords=apa102](https://amazon.com/s?field-keywords=apa102)
+  (quality will vary among resellers)
+- iPixel LED: [www.ipixelleds.com](http://www.ipixelleds.com) (they accept
+  custom orders)
+- Pimoroni: [shop.pimoroni.com/?q=apa102](https://shop.pimoroni.com/?q=apa102)
+
+_The periph authors do not endorse any specific seller. These are only provided
+for your convenience._
