--- a/site/content/device/ds18b20.md
+++ b/site/content/device/ds18b20.md
@@ -9,6 +9,8 @@ picture = "/img/ds18b20.jpg"
 [ds18b20](https://periph.io/x/periph/devices/ds18b20) provides support for
 inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire temperature sensors.
 
+This can be connected via a [ds2483](/device/ds248x/) 1-wire controller.
+
 
 # Example
 
@@ -23,3 +25,15 @@ func main() {
   // TODO 😳
 }
 ```
+
+
+# Buying
+
+- Adafruit: [adafruit.com/?q=ds18b20](https://www.adafruit.com/?q=ds18b20)
+- Aliexpress:
+  [aliexpress.com/wholesale?SearchText=ds18b20](https://aliexpress.com/wholesale?SearchText=ds18b20)
+- Amazon:
+  [amazon.com/s?field-keywords=ds18b20](https://amazon.com/s?field-keywords=ds18b20)
+
+_The periph authors do not endorse any specific seller. These are only provided
+for your convenience._
