--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -9,6 +9,8 @@ picture = "/img/ds248x.jpg"
 [ds248x](https://periph.io/x/periph/devices/ds248x) provides support for a Maxim
 DS2483 or DS2482-100 1-wire interface chip over I²C.
 
+This can be used to connect a [ds18b20](/device/ds18b20/) temperature sensor.
+
 
 # Example
 
@@ -23,3 +25,11 @@ func main() {
   // TODO 😳
 }
 ```
+
+
+# Buying
+
+- Adafruit: [adafruit.com/?q=ds2483](https://www.adafruit.com/?q=ds2483)
+
+_The periph authors do not endorse any specific seller. These are only provided
+for your convenience._
