--- a/site/content/device/ssd1306.md
+++ b/site/content/device/ssd1306.md
@@ -133,3 +133,16 @@ connected via I²C, one via SPI. They shall display the same output.
 
 <div class="youtube"><iframe src=//www.youtube.com/embed/1yEPFeP7Ky4 allowfullscreen frameborder=0></iframe></div>
 
+
+# Buying
+
+- Adafruit: [adafruit.com/?q=ssd1306](https://www.adafruit.com/?q=ssd1306)
+- Aliexpress:
+  [aliexpress.com/wholesale?SearchText=ssd1306](https://aliexpress.com/wholesale?SearchText=ssd1306)
+- Amazon:
+  [amazon.com/s?field-keywords=ssd1306](https://amazon.com/s?field-keywords=ssd1306)
+- Pimoroni:
+  [shop.pimoroni.com/?q=ssd1306](https://shop.pimoroni.com/?q=ssd1306)
+
+_The periph authors do not endorse any specific seller. These are only provided
+for your convenience._
