--- a/site/content/device/tm1637.md
+++ b/site/content/device/tm1637.md
@@ -23,3 +23,14 @@ func main() {
   // TODO 😳
 }
 ```
+
+# Buying
+
+- Aliexpress:
+  [aliexpress.com/wholesale?SearchText=tm1637](https://aliexpress.com/wholesale?SearchText=tm1637)
+- Amazon:
+  [amazon.com/s?field-keywords=tm1637](https://amazon.com/s?field-keywords=tm1637)
+- Pimoroni: [shop.pimoroni.com/?q=tm1637](https://shop.pimoroni.com/?q=tm1637)
+
+_The periph authors do not endorse any specific seller. These are only provided
+for your convenience._
