--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -37,6 +37,15 @@ play with the lights without programming. It can stream an image to create
 [digital light painting](https://learn.adafruit.com/dotstar-pi-painter/overview).
 
 
+# Learn more
+
+- [Understanding the
+  APA102](https://cpldcpu.wordpress.com/2014/11/30/understanding-the-apa102-superled/)
+  by Tim, and his following posts.
+- ['DotStar' on
+  Adafruit](https://learn.adafruit.com/adafruit-dotstar-leds?view=all)
+
+
 # Example
 
 ```go
