apa102: add link to digital painting
It's an awesome resource.

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -39,6 +39,8 @@ play with the lights without programming. It can stream an image to create
 
 # Learn more
 
+- [Digital painting on
+  Adafruit](https://learn.adafruit.com/dotstar-pi-painter?view=all)
 - [Understanding the
   APA102](https://cpldcpu.wordpress.com/2014/11/30/understanding-the-apa102-superled/)
   by Tim, and his following posts.
