--- a/site/content/device/ina219.md
+++ b/site/content/device/ina219.md
@@ -7,7 +7,7 @@ picture = "/img/ina219.jpg"
 # Overview
 
 [ina219](https://periph.io/x/periph/devices/ina219) provides support for a
-[popular power sensor from Texas Inbstruments](http://www.ti.com/product/INA219):
+[popular power sensor from Texas Instruments](http://www.ti.com/product/INA219):
 
 # Features 
 * Senses Bus Voltages from 0 to 26 V
@@ -16,8 +16,6 @@ picture = "/img/ina219.jpg"
 * High Accuracy: 0.5% (Maximum) 
 * Filtering Options
 * Calibration Registers
-
-![ina219](/img/ina219hookedup.jpg)
 
 # Driver
 
