Replace 'update' with 'release'

--- a/site/content/news/2018/v3.4.0.md
+++ b/site/content/news/2018/v3.4.0.md
@@ -11,7 +11,7 @@ notruncate = false
 [Version 3.4.0](https://github.com/google/periph/releases/tag/v3.4.0) is
 released!
 
-This is a feature and bug fix update, the last one for 2018.
+This is a feature and bug fix release, the last one for 2018.
 
 Special thanks to [NeuralSpaz](https://github.com/NeuralSpaz) for his
 outstanding contributions to the physic package.
