--- a/site/content/device/ina219.md
+++ b/site/content/device/ina219.md
@@ -45,57 +45,54 @@ This example uses either a [INA219](https://periph.io/x/periph/experimental/devi
 connected via [I²C](https://periph.io/x/periph/conn/i2c).
 
 
-~~~go
-
+```go
 package main
 
 import (
-	"fmt"
-	"log"
+    "fmt"
+    "log"
 
-	"periph.io/x/periph/conn/i2c/i2creg"
-	"periph.io/x/periph/experimental/devices/ina219"
-	"periph.io/x/periph/host"
+    "periph.io/x/periph/conn/i2c/i2creg"
+    "periph.io/x/periph/experimental/devices/ina219"
+    "periph.io/x/periph/host"
 )
 
-func Example() {
-	// Make sure periph is initialized.
-	if _, err := host.Init(); err != nil {
-		log.Fatal(err)
-	}
+func main() {
+    // Make sure periph is initialized.
+    if _, err := host.Init(); err != nil {
+        log.Fatal(err)
+    }
 
-	// Open default I²C bus.
-	bus, err := i2creg.Open("")
-	if err != nil {
-		log.Fatalf("failed to open I²C: %v", err)
-	}
-	defer bus.Close()
+    // Open default I²C bus.
+    bus, err := i2creg.Open("")
+    if err != nil {
+      log.Fatalf("failed to open I²C: %v", err)
+    }
+    defer bus.Close()
 
-	// Create a new power sensor.
-	sensor, err := ina219.New(bus, &ina219.DefaultOpts)
-	if err != nil {
-		log.Fatalln(err)
-	}
+    // Create a new power sensor.
+    sensor, err := ina219.New(bus, &ina219.DefaultOpts)
+    if err != nil {
+      log.Fatalln(err)
+    }
 
-	// Read values from sensor.
-	measurement, err := sensor.Sense()
+    // Read values from sensor.
+    measurement, err := sensor.Sense()
+    if err != nil {
+      log.Fatalln(err)
+    }
 
-	if err != nil {
-		log.Fatalln(err)
-	}
-
-	fmt.Println(measurement)
+    fmt.Println(measurement)
 }
-
-~~~
+```
 
 # Calibration
+
 The default options are for a 100mΩ sense resistor. To calibrate measure the 
 actual value of the sense resistor and use that value in the ina219 options like
  so:
 
-~~~go
-
+```go
 sensorOpts := ina219.Opts{
     Address       :0x40,
     SenseResistor :50 * physics.MilliOhm,
@@ -107,10 +104,11 @@ sensorOpts := ina219.Opts{
         log.Fatal(err)
     }
     //...
-~~~
+```
 
 
 # Maximum Current
+
 The maximum current for the ina219 is determined by the value of the sense 
 resistor. There can't be more than 320mV drop across the sense resistor. With a
 100mΩ sense resistor the maximum current is 3.2Amps. Using V=IR, you can 
@@ -126,8 +124,7 @@ If the actual load current is bellow the maximum current for your sense resistor
 setting MaxCurrent to some amount above the maximum load current will give more 
 resolution to the current and power readings. Example: Load of 500mA with 100mΩ.
 
-~~~go
-
+```go
 sensorOpts := ina219.Opts{
     Address       :0x40,
     SenseResistor :100 * physics.MilliOhm,
@@ -139,7 +136,7 @@ sensorOpts := ina219.Opts{
         log.Fatal(err)
     }
     //...
-~~~
+```
 
 # Buying
 
