--- a/site/content/news/2019/v3.5.0.md
+++ b/site/content/news/2019/v3.5.0.md
@@ -79,7 +79,7 @@ Thanks to:
 - Join the [periph.io slack channel](https://gophers.slack.com/messages/periph/)
   to chat with us!
   - Need an account? [Get an invite
-    here](https://invite.slack.golangbridge.org/).
+    here](http://invite.slack.golangbridge.org/).
 
 Follow [twitter.com/periphio](https://twitter.com/periphio) for news and
 updates!
