Start the migration to the new repositories

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -20,7 +20,7 @@ market.
 
 # Driver
 
-The driver [apa102](https://periph.io/x/periph/devices/apa102) has the following
+The driver [apa102](https://periph.io/x/devices/v3/apa102) has the following
 functionality:
 
 - Full 13 bits support
@@ -60,10 +60,10 @@ import (
     "log"
 
     "periph.io/x/extra/devices/screen"
-    "periph.io/x/periph/conn/display"
-    "periph.io/x/periph/conn/spi/spireg"
-    "periph.io/x/periph/devices/apa102"
-    "periph.io/x/periph/host"
+    "periph.io/x/conn/v3/display"
+    "periph.io/x/conn/v3/spi/spireg"
+    "periph.io/x/devices/v3/apa102"
+    "periph.io/x/host/v3"
 )
 
 func main() {
