--- a/site/content/device/ds18b20.md
+++ b/site/content/device/ds18b20.md
@@ -6,7 +6,7 @@ picture = "/img/ds18b20.jpg"
 
 # Overview
 
-[ds18b20](https://periph.io/x/periph/devices/ds18b20) provides support for
+[ds18b20](https://periph.io/x/devices/v3/ds18b20) provides support for
 inexpensive Dallas Semi / Maxim DS18B20 and MAX31820 1-wire temperature sensors.
 
 This can be connected via a [ds2483](/device/ds248x/) 1-wire controller.
