--- a/site/content/device/ds248x.md
+++ b/site/content/device/ds248x.md
@@ -6,7 +6,7 @@ picture = "/img/ds248x.jpg"
 
 # Overview
 
-[ds248x](https://periph.io/x/periph/devices/ds248x) provides support for a Maxim
+[ds248x](https://periph.io/x/devices/v3/ds248x) provides support for a Maxim
 DS2483 or DS2482-100 1-wire interface chip over I²C.
 
 This can be used to connect a [ds18b20](/device/ds18b20/) temperature sensor.
