--- a/site/content/device/ina219.md
+++ b/site/content/device/ina219.md
@@ -6,7 +6,7 @@ picture = "/img/ina219.jpg"
 
 # Overview
 
-[ina219](https://periph.io/x/periph/devices/ina219) provides support for a
+[ina219](https://periph.io/x/devices/v3/ina219) provides support for a
 [popular power sensor from Texas Instruments](http://www.ti.com/product/INA219):
 
 # Features 
@@ -25,7 +25,7 @@ The driver as the following functionality:
 - Fast integer only calculation
 - Support for I²C
 - Calibration and Sense Resistor Options
-- All measurement units are supported by [physic](https://periph.io/x/periph/conn/physic)
+- All measurement units are supported by [physic](https://periph.io/x/conn/v3/physic)
 
 # Tool
 
@@ -41,8 +41,8 @@ to retrieve measurement from the device.
 
 _Purpose:_ gather current, bus voltage and power.
 
-This example uses either a [INA219](https://periph.io/x/periph/experimental/devices/ina219) 
-connected via [I²C](https://periph.io/x/periph/conn/i2c).
+This example uses either a [INA219](https://periph.io/x/devices/v3/ina219) 
+connected via [I²C](https://periph.io/x/conn/v3/i2c).
 
 
 ```go
@@ -52,9 +52,9 @@ import (
     "fmt"
     "log"
 
-    "periph.io/x/periph/conn/i2c/i2creg"
-    "periph.io/x/periph/experimental/devices/ina219"
-    "periph.io/x/periph/host"
+    "periph.io/x/conn/v3/i2c/i2creg"
+    "periph.io/x/devices/v3/ina219"
+    "periph.io/x/host/v3"
 )
 
 func main() {
