--- a/site/content/device/ssd1306.md
+++ b/site/content/device/ssd1306.md
@@ -6,7 +6,7 @@ picture = "/img/ssd1306.jpg"
 
 # Overview
 
-[ssd1306](https://periph.io/x/periph/devices/ssd1306) provides support for the
+[ssd1306](https://periph.io/x/devices/v3/ssd1306) provides support for the
 SSD1306 monochrome OLED display controller via I²C or SPI in 4-wire mode.
 
 It can control displays up to 128x64 in size.
@@ -37,7 +37,7 @@ to stream animanted GIFs to the display.
 _Purpose:_ display an animated GIF.
 
 
-This example uses a [ssd1306](https://periph.io/x/periph/devices/ssd1306). The
+This example uses a [ssd1306](https://periph.io/x/devices/v3/ssd1306). The
 frames in the GIF are resized and centered first to reduce the CPU overhead.
 
 ```go
@@ -51,9 +51,9 @@ import (
     "os"
     "time"
 
-    "periph.io/x/periph/conn/i2c/i2creg"
-    "periph.io/x/periph/devices/ssd1306"
-    "periph.io/x/periph/host"
+    "periph.io/x/conn/v3/i2c/i2creg"
+    "periph.io/x/devices/v3/ssd1306"
+    "periph.io/x/host/v3"
     "github.com/nfnt/resize"
 )
 
@@ -121,12 +121,12 @@ func main() {
 # Smoke test
 
 Setup for [SSD1306 smoke
-test](https://periph.io/x/periph/devices/ssd1306/ssd1306smoketest):
+test](https://periph.io/x/devices/v3/ssd1306/ssd1306smoketest):
 
-- Two [SSD1306](https://periph.io/x/periph/devices/ssd1306) connected to a
+- Two [SSD1306](https://periph.io/x/devices/v3/ssd1306) connected to a
   Raspberry Pi 3:
-  - the left one is connected via [SPI](https://periph.io/x/periph/conn/spi):
-  - the right one is connected via [I²C](https://periph.io/x/periph/conn/i2c)
+  - the left one is connected via [SPI](https://periph.io/x/conn/v3/spi):
+  - the right one is connected via [I²C](https://periph.io/x/conn/v3/i2c)
 
 It confirms that two SSD1306 controllers can be driven simultaneously, one
 connected via I²C, one via SPI. They shall display the same output.
