--- a/site/content/device/tm1637.md
+++ b/site/content/device/tm1637.md
@@ -6,7 +6,7 @@ picture = "/img/tm1637.jpg"
 
 # Overview
 
-[tm1637](https://periph.io/x/periph/devices/tm1637) provides support for the
+[tm1637](https://periph.io/x/devices/v3/tm1637) provides support for the
 TM1637 hex digits controller. It is controlled directly over GPIO pins.
 
 
