Update http: links to https:

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -131,7 +131,7 @@ APA102 LEDs can be bought in various arangements:
 - Amazon:
   [amazon.com/s?field-keywords=apa102](https://amazon.com/s?field-keywords=apa102)
   (quality will vary among resellers)
-- iPixel LED: [www.ipixelleds.com](http://www.ipixelleds.com) (they accept
+- iPixel LED: [www.ipixelleds.com](https://www.ipixelleds.com) (they accept
   custom orders)
 - Pimoroni: [shop.pimoroni.com/?q=apa102](https://shop.pimoroni.com/?q=apa102)
 
