--- a/site/content/device/ina219.md
+++ b/site/content/device/ina219.md
@@ -7,7 +7,7 @@ picture = "/img/ina219.jpg"
 # Overview
 
 [ina219](https://periph.io/x/devices/v3/ina219) provides support for a
-[popular power sensor from Texas Instruments](http://www.ti.com/product/INA219):
+[popular power sensor from Texas Instruments](https://www.ti.com/product/INA219):
 
 # Features 
 * Senses Bus Voltages from 0 to 26 V
