--- a/site/content/news/2017/v2.0.0.md
+++ b/site/content/news/2017/v2.0.0.md
@@ -72,7 +72,7 @@ This release brings a whole set of new features:
 
 ## Special thanks
 
-I want to give a special thank to [Matt](http://github.com/mattetti) for recent
+I want to give a special thank to [Matt](https://github.com/mattetti) for recent
 code reviews and [Thorsten](https://github.com/tve) for previously handling this
 task.
 
