--- a/site/content/news/2017/v2.1.0.md
+++ b/site/content/news/2017/v2.1.0.md
@@ -75,7 +75,7 @@ This release brings a whole set of new features:
 
 ## Special thanks
 
-I want to give a special thank to [Matt](http://github.com/mattetti) for code
+I want to give a special thank to [Matt](https://github.com/mattetti) for code
 reviews and [Hidetoshi](https://github.com/simokawa) for `bcm283x.PWM()` fixes.
 
 Follow [twitter.com/periphio](https://twitter.com/periphio) for news and
