--- a/site/content/news/2018/v2.2.0.md
+++ b/site/content/news/2018/v2.2.0.md
@@ -88,7 +88,7 @@ possible!
 
 - [@bodokaiser](https://github.com/bodokaiser) for beagle bone support and
   gpiotest improvement.
-- [@cassiobotaro](http://github.com/cassiobotaro) for cleanups.
+- [@cassiobotaro](https://github.com/cassiobotaro) for cleanups.
 - [@jdevelop](https://github.com/jdevelop) for hd44780 and mfrc522 device
   drivers.
 - [@libesz](https://github.com/libesz) for onewire-list command.
