--- a/site/content/news/2019/v3.6.2.md
+++ b/site/content/news/2019/v3.6.2.md
@@ -27,7 +27,7 @@ for the gory details.
 - Join the [periph.io slack channel](https://gophers.slack.com/messages/periph/)
   to chat with us!
   - Need an account? [Get an invite
-    here](http://invite.slack.golangbridge.org/).
+    here](https://invite.slack.golangbridge.org/).
 
 Follow [twitter.com/periphio](https://twitter.com/periphio) for news and
 updates!
