--- a/site/content/news/2018/v3.0.0.md
+++ b/site/content/news/2018/v3.0.0.md
@@ -272,7 +272,7 @@ code reviews. The project would be much less awesome without them!
 - Join the [periph.io slack channel](https://gophers.slack.com/messages/periph/)
   to chat with us!
   - Need an account? [Get an invite
-    here](http://invite.slack.golangbridge.org/).
+    here](https://invite.slack.golangbridge.org/).
 
 Follow [twitter.com/periphio](https://twitter.com/periphio) for news and
 updates!
