Fix stale examples
- Remove references to extra.
- Make apa102 and ftdi examples work.
- Update ftdi debian udev file URL.
- Update homebrew tarball reference.

--- a/site/content/device/apa102.md
+++ b/site/content/device/apa102.md
@@ -59,7 +59,7 @@ import (
     "image/color"
     "log"
 
-    "periph.io/x/extra/devices/screen"
+    "periph.io/x/devices/v3/screen1d"
     "periph.io/x/conn/v3/display"
     "periph.io/x/conn/v3/spi/spireg"
     "periph.io/x/devices/v3/apa102"
@@ -81,13 +81,13 @@ func main() {
     fmt.Printf("\n")
 }
 
-// getLEDs returns an *apa102.Dev, or fails back to *screen.Dev if no SPI port
+// getLEDs returns an *apa102.Dev, or fails back to *screen1d.Dev if no SPI port
 // is found.
 func getLEDs() display.Drawer {
     s, err := spireg.Open("")
     if err != nil {
         fmt.Printf("Failed to find a SPI port, printing at the console:\n")
-        return screen.New(100)
+        return screen1d.New(&screen1d.Opts{X: 100})
     }
     // Change the option values to see their effects.
     opts := apa102.DefaultOpts
