--- a/site/content/news/2018/v2.2.0.md
+++ b/site/content/news/2018/v2.2.0.md
@@ -15,6 +15,8 @@ This is a polish and features update. I know a [v3 was
 promised](/news/2017/towards_v3/) but we decided to punt on breaking changes
 since there was too much great stuff to bake into the v2 branch.
 
+Historical note: periphextra and hostextra.Init() is deprecated.
+
 <!--more-->
 
 The new release contains [79
